--- a/BulkyBookWeb/appsettings.json
+++ b/BulkyBookWeb/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Uid=postgres;Pwd=1234;Database=bulky;"
+  }
 }
 
