--- a/BulkyBook.Models/BulkyBook.Models.csproj
+++ b/BulkyBook.Models/BulkyBook.Models.csproj
@@ -9,4 +9,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="ViewModels\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
 </Project>
