--- a/BulkyBookWeb/appsettings.json
+++ b/BulkyBookWeb/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Uid=postgres;Pwd=1234;Database=bulky;"
-  }
+  },
+  "Redis": "localhost:6379"
 }
-
